# scrapio

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml
crates/scrapio-ai/: Cargo.toml
crates/scrapio-ai/src/: browser_agent.rs  config.rs  extraction.rs  lib.rs  prompts.rs  provider.rs  ralph.rs
crates/scrapio-ai/src/provider/: mod.rs
crates/scrapio-ai/tests/: lib.rs  ralph.rs
crates/scrapio-browser/: Cargo.toml
crates/scrapio-browser/src/: browser.rs  cdp.rs  chromedriver.rs  driver.rs  lib.rs  stealth.rs
crates/scrapio-browser/tests/: browser.rs  browser_interactions.rs  browser_unit.rs  cdp.rs  chromedriver.rs  driver.rs  stealth.rs
crates/scrapio-classic/: Cargo.toml
crates/scrapio-classic/src/: lib.rs  pipeline.rs  spider.rs
crates/scrapio-classic/src/crawler/: frontier.rs  mod.rs  parser.rs  robots.rs  scope.rs  state.rs  types.rs
crates/scrapio-classic/tests/: lib.rs
crates/scrapio-classic/tests/crawler/: frontier.rs  parser.rs  robots.rs  scope.rs  state.rs  types.rs
crates/scrapio-cli/: Cargo.toml
crates/scrapio-cli/src/: commands.rs  main.rs  server.rs  swagger.rs
crates/scrapio-core/: Cargo.toml
crates/scrapio-core/src/: error.rs  http.rs  lib.rs  proxy.rs  user_agent.rs  utils.rs
crates/scrapio-core/tests/: user_agent.rs
crates/scrapio-mcp/: Cargo.toml
crates/scrapio-mcp/src/: error.rs  lib.rs  main.rs  server.rs
crates/scrapio-mcp/src/tools/: mod.rs
crates/scrapio-runtime/: Cargo.toml
crates/scrapio-runtime/src/: lib.rs  tokio_runtime.rs
crates/scrapio-storage/: Cargo.toml
crates/scrapio-storage/src/: lib.rs
examples/: Cargo.toml  README.md  ai.rs  browser.rs  browser_complex.rs  classic.rs  proxy_basic.rs  proxy_rotation.rs  proxy_with_crawl.rs  ralph-schema.json  ralph.rs  spider.rs
