# Scrapio Workspace

[workspace]
members = [
    "crates/scrapio-runtime",
    "crates/scrapio-core",
    "crates/scrapio-classic",
    "crates/scrapio-ai",
    "crates/scrapio-cli",
    "crates/scrapio-storage",
    "examples",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3