# Scrapio Workspace

[workspace]
members = [
    "crates/scrapio-ai",
    "crates/scrapio-browser",
    "crates/scrapio-classic",
    "crates/scrapio-cli",
    "crates/scrapio-core",
    "crates/scrapio-mcp",
    "crates/scrapio-runtime",
    "crates/scrapio-storage",
    "examples",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
