[package]
name = "scrapio-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
scrapio-classic = { path = "../crates/scrapio-classic" }
scrapio-ai = { path = "../crates/scrapio-ai" }
scrapio-runtime = { path = "../crates/scrapio-runtime" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "classic"
path = "classic.rs"

[[bin]]
name = "ai"
path = "ai.rs"

[[bin]]
name = "spider"
path = "spider.rs"