[package]
name = "scrapio-examples"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "classic"
path = "classic.rs"

[[bin]]
name = "ai"
path = "ai.rs"

[[bin]]
name = "spider"
path = "spider.rs"

[[bin]]
name = "browser"
path = "browser.rs"

[[bin]]
name = "browser_complex"
path = "browser_complex.rs"

[[bin]]
name = "ralph"
path = "ralph.rs"

[dependencies]
scrapio-ai = { path = "../crates/scrapio-ai", features = ["browser"] }
scrapio-browser = { path = "../crates/scrapio-browser" }
scrapio-classic = { path = "../crates/scrapio-classic" }
scrapio-core = { path = "../crates/scrapio-core" }
scrapio-runtime = { path = "../crates/scrapio-runtime" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
