[package]
name = "scrapio-ai"
version = "0.1.0"
edition = "2024"
description = "AI-powered scraping for Scrapio"
license = "MIT"

[features]
default = ["openai"]
openai = []
anthropic = []
ollama = []
browser = ["dep:scrapio-browser", "dep:tracing"]

[dependencies]
regex = "1"
reqwest = "0.13"
scraper = "0.25"
scrapio-browser = { path = "../scrapio-browser", optional = true }
scrapio-core = { path = "../scrapio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = "1"
