[package]
name = "scrapio-ai"
version = "0.2.0"
edition = "2024"
description = "AI-powered scraping for Scrapio"
license = "MIT"

[features]
default = ["openai"]
openai = []
anthropic = []
ollama = []
browser = ["dep:scrapio-browser"]

[dependencies]
regex = "1"
reqwest = { version = "0.13", features = ["json"] }
rig-core = "0.35"
scraper = "0.26.0"
scrapio-browser = { path = "../scrapio-browser", optional = true }
scrapio-core = { path = "../scrapio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = "1"
