[package]
name = "scrapio-browser"
version = "0.1.0"
edition = "2024"
description = "Stealth browser automation for Scrapio"
license = "MIT"

[dependencies]
scrapio-core = { path = "../scrapio-core" }
fantoccini = "0.22"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
