[package]
name = "scrapio-browser"
version = "0.1.0"
edition = "2024"
description = "Stealth browser automation for Scrapio"
license = "MIT"

[dependencies]
dirs = "6"
fantoccini = "0.22"
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
scrapio-core = { path = "../scrapio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
zip = "8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
urlencoding = "2"
