[package]
name = "scrapio-classic"
version = "0.1.0"
edition = "2024"
description = "Classic rule-based scraping for Scrapio"
license = "MIT"

[dependencies]
scrapio-core = { path = "../scrapio-core" }
reqwest = "0.13"
scraper = "0.25"
tokio = { version = "1", features = ["time"] }
serde_json = "1"
csv = "1"
thiserror = "2"

[dev-dependencies]
tokio = "1"
