[package]
name = "scrapio-classic"
version = "0.1.0"
edition = "2024"
description = "Classic rule-based scraping for Scrapio"
license = "MIT"

[dependencies]
csv = "1"
reqwest = "0.13"
scraper = "0.25"
scrapio-core = { path = "../scrapio-core" }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = "1"
