[package]
name = "scrapio-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Scrapio"
license = "MIT"

[[bin]]
name = "scrapio"
path = "src/main.rs"

[features]
default = []

[dependencies]
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json"] }
scrapio-ai = { path = "../scrapio-ai", features = ["browser"] }
scrapio-browser = { path = "../scrapio-browser" }
scrapio-classic = { path = "../scrapio-classic" }
scrapio-core = { path = "../scrapio-core" }
scrapio-runtime = { path = "../scrapio-runtime" }
scrapio-storage = { path = "../scrapio-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
