[package]
name = "scrapio-core"
version = "0.1.0"
edition = "2024"
description = "Core types and utilities for Scrapio"
license = "MIT"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }