[package]
name = "scrapio-core"
version = "0.1.0"
edition = "2024"
description = "Core types and utilities for Scrapio"
license = "MIT"

[dependencies]
regex = "1"
reqwest = { version = "0.13", features = ["json", "cookies", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
