[package]
name = "scrapio-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Scrapio"
license = "MIT"

[dependencies]
axum = "0.8"
http = "1"
rmcp = { version = "1.3", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
scrapio-ai = { path = "../scrapio-ai", features = ["browser"] }
scrapio-browser = { path = "../scrapio-browser" }
scrapio-classic = { path = "../scrapio-classic" }
scrapio-core = { path = "../scrapio-core" }
scrapio-runtime = { path = "../scrapio-runtime" }
scrapio-storage = { path = "../scrapio-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
