[package]
name = "scrapio-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime abstraction for Scrapio"
license = "MIT"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
