[package]
name = "scrapio-storage"
version = "0.1.0"
edition = "2024"
description = "Storage layer for Scrapio"
license = "MIT"

[dependencies]
scrapio-core = { path = "../scrapio-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
